--- a/XFIT.API/appsettings.Development.json
+++ b/XFIT.API/appsettings.Development.json
@@ -4,9 +4,10 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "ConnectionStrings": {
-      "XFITDbConnection": "Server=(localdb)\\mssqllocaldb;Database=XFITDb;Trusted_Connection=True;MultipleActiveResultSets=true"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "XFITDbConnection": "Server=(localdb)\\mssqllocaldb;Database=XFITDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
