csvfile path in appsettings.json

--- a/XFIT.API/appsettings.Development.json
+++ b/XFIT.API/appsettings.Development.json
@@ -9,5 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "XFITDbConnection": "Server=(localdb)\\mssqllocaldb;Database=XFITDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-  }
+  },
+  "CsvFilePath": "C:\\Users\\denni\\Downloads\\data-2023-3-29-14.csv"
 }
